<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/inputPersonLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/input_margine_horizontal"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/inputFirstNameLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/inputFirstNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_first_name_title"
                android:textSize="@dimen/input_title_textsize" />

            <EditText
                android:id="@+id/inputFirstNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_first_name_hint"
                android:textSize="@dimen/input_textsize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/inputLastNameLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/inputLastNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_last_name_title"
                android:textSize="@dimen/input_title_textsize" />

            <EditText
                android:id="@+id/inputLastNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_last_name_hint"
                android:textSize="@dimen/input_textsize" />
        </LinearLayout>

        <TextView
            android:id="@+id/inputAddressTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_address_title"
            android:textSize="@dimen/input_title_textsize" />

        <EditText
            android:id="@+id/inputAddressET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_address_hint"
            android:textSize="@dimen/input_textsize" />

        <LinearLayout
            android:id="@+id/inputPhoneNumberLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/inputPhoneNumberTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_phone_number_title"
                android:textSize="@dimen/input_title_textsize" />

            <EditText
                android:id="@+id/inputPhoneNumberET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_phone_number_default"
                android:textSize="@dimen/input_textsize" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/saveBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPersonLL" />

    <ListView
        android:id="@+id/personsLV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/saveBTN"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>